--- a/views/signup.html
+++ b/views/signup.html
@@ -2,21 +2,33 @@
 <html>
     <head>
         <title>Keeper - Signup</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" type="text/css" href="/static/css/form.css" />
     </head>
     <body>
-        <form action="/signup" method="POST">
-            <h2>Signup</h2>
-            <input name="username" placeholder="Username" />
-            <br />
-            <input name="password" placeholder="Password" type="password" />
-            <br />
-            <button type="submit">Signup</button>
-            {% if message %}
-            <div>{{message}}</div>
-            {% endif %}
-            <br />
-            <a href="/login">Already have an account?</a>
-        </form>
+        <div id="content">
+            <form id="form" action="/signup" method="POST">
+                <h2>Signup</h2>
+                <hr />
+                <div class="field">
+                    <b>Username:</b>
+                    <br />
+                    <input name="username" placeholder="Username" />
+                </div>
+                <div class="field">
+                    <b>Password:</b>
+                    <br />
+                    <input name="password" placeholder="Password" type="password" />
+                </div>
+                <div class="field">
+                    <button type="submit">Signup</button>
+                </div>
+                {% if message %}
+                <div class="field error">{{message}}</div>
+                {% endif %}
+                <br />
+                <a href="/login">Already have an account?</a>
+            </form>
+        </div>
     </body>
 </html>
