service refactoring - basic password generator added in new login view

--- a/views/index.html
+++ b/views/index.html
@@ -51,4 +51,7 @@
     <script src="/static/js/jquery-3.6.0.min.js"></script>
     <script src="/static/js/jquery.dataTables.min.js"></script>
     <script src="/static/js/index.js"></script>
+    <script>
+        $(document).ready(() => $('#logins').DataTable())
+    </script>
 </html>
